# tests_with_uv

first_uv_app/: .gitignore  example.py  hello.py  main.py  pyproject.toml
